envoy.yaml
static_resources:
  listeners:
    - name: grpc_web_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: grpc_web
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: emulator
                      domains:
                        - "*"
                      typed_per_filter_config:
                        envoy.filters.http.cors:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                          allow_origin_string_match:
                            - prefix: "http://"
                            - prefix: "https://"
                          allow_methods: "GET, POST, OPTIONS"
                          allow_headers: "authorization,content-type,x-grpc-web,x-user-agent,grpc-timeout,x-accept-content-transfer-encoding,x-accept-response-streaming"
                          expose_headers: "grpc-status,grpc-message,grpc-encoding,grpc-accept-encoding"
                          max_age: "1728000"
                      routes:
                        - match:
                            prefix: "/grpc/"
                          route:
                            cluster: emulator_grpc
                            prefix_rewrite: "/"
                            timeout: 0s
                        - match:
                            prefix: "/grpc"
                          route:
                            cluster: emulator_grpc
                            prefix_rewrite: "/"
                            timeout: 0s
                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: emulator_grpc
      connect_timeout: 2s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: emulator_grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: emulator
                      port_value: 8554
